public enum SexType
{
    Male,
    Female
}