public enum SpeciesType
{
    Rooster,
    Eagle,
    Tiger
}