namespace Zoo.Domain.Animals;

public enum HealthStatus
{
    Healthy,
    Sick,
    Dead
}
