@startuml ZooSimulatorDomain
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam dpi 120
top to bottom direction

title Zoo Simulator - Domain (Animals + Habitats)

package "Domain.Animals" {
  abstract class Animal {
    +Name : string
    +Species : SpeciesType
    +Sex : SexType
    +AgeDays : int
    +IsAlive : bool
    +IsHungry : bool
    +IsSick : bool
    +IsGestating : bool
    +GetDailyFoodNeedKg() : decimal
    +AdvanceOneDay() : AnimalDailyOutcome
  }

  class ZooAnimal

  class AnimalProfile {
    +DailyFoodKg : decimal
    +DaysBeforeHungry : int
    +SexualMaturityDays : int
    +GestationDays : int?
    +ReproductionEndDays : int
    +InfantMortalityRate : decimal?
    +LifeExpectancyDays : int
    +AnnualDiseaseProbability : decimal
    +BaseDiseaseDurationDays : int
  }

  class AnimalDailyOutcome

  enum SpeciesType {
    Tiger
    Eagle
    Rooster
  }

  enum SexType {
    Male
    Female
  }
}

package "Domain.Habitats" {
  class Habitat {
    +Species : SpeciesType
    +Capacity : int
    +Animals : List<Animal>
    +AvailableSlots : int
    +HealthRatio : decimal
    +ProcessMonth(random) : HabitatMonthlyOutcome
  }

  class HabitatProfile {
    +BuyPrice : decimal
    +SellPrice : decimal
    +Capacity : int
    +MonthlyLossCount : int
    +LossProbability : decimal
  }

  class HabitatMonthlyOutcome
}

package "Domain.Health" {
  enum HealthStatus {
    Healthy
    Sick
    Dead
  }
}

enum FoodType {
  Meat
  Seeds
}

ZooAnimal --|> Animal
Animal --> AnimalProfile
Animal --> HealthStatus
Animal --> SpeciesType
Animal --> SexType
Animal --> FoodType
Animal --> AnimalDailyOutcome

Habitat --> HabitatProfile
Habitat o-- "0..*" Animal
Habitat --> HabitatMonthlyOutcome
Habitat --> SpeciesType

note bottom of Animal
Core rules live directly on Animal:
- hunger threshold
- gestation / egg incubation
- disease progression
- old age death
end note
@enduml
